--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <a href="/company-list">회사관리</a>
-    <br>
-    <a href="/migration">데이터관리</a>
+<!--    <a href="/company-list">회사관리</a>-->
+<!--    <br>-->
+<!--    <a href="/migration">데이터관리</a>-->
+Hello world!
 </body>
 </html>
