--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="/style.css?ver=1" />
+    <title>MyBlog | 메인페이지</title>
 </head>
 <body>
-<!--    <a href="/company-list">회사관리</a>-->
-<!--    <br>-->
-<!--    <a href="/migration">데이터관리</a>-->
-Hello world!
+<a class="gothic", href="/joinForm">•회원가입</a>
+<a class="gothic", href="/loginForm">•로그인</a>
 </body>
 </html>
