--- a/src/main/resources/templates/user/joinForm.html
+++ b/src/main/resources/templates/user/joinForm.html
@@ -8,8 +8,8 @@
 <body>
 <h3 class="gothic">회원가입</h3>
 <form method="post" action="/join">
-    <label class="gothic" for="name">Name:</label>
-    <input class="nanum" type="text" id="name" name="name" required/>
+    <label class="gothic" for="id">Name:</label>
+    <input class="nanum" type="text" id="id" name="id" required/>
     <br>
     <label class="gothic" for="password">PW:</label>
     <input class="nanum" type="text" id="password" name="password" required/>
