member create, diary create 까지 완료.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -38,10 +38,18 @@ a{
 .gothic:active{
     background-color: #242424;
 }
-label, input{
+label, input, textarea{
     display: inline-block;
 }
 HTML, body{
     margin: 0px; padding: 0px;
     background-color: #343434;
+}
+textarea {
+    border: none;
+    resize: none;
+}
+th.gothic, td.gothic{
+    border-bottom: 1px solid floralwhite;
+    border-radius: 0px 0px 0px 0px;
 }
