--- a/src/main/resources/templates/member/member.html
+++ b/src/main/resources/templates/member/member.html
@@ -19,7 +19,7 @@
     </tbody>
 </table>
 <a th:href="@{'/member-update'+${member.id}}">◂정보수정</a>
-<a href="/">◂로그아웃</a>
+<a href="/static">◂로그아웃</a>
 <a th:href="@{'/'+${member.id}}">◂뒤로가기</a>
 </body>
 </html>
