--- a/src/main/resources/templates/user/joinForm.html
+++ b/src/main/resources/templates/user/joinForm.html
@@ -12,7 +12,7 @@
     <input class="nanum" type="text" id="id" name="id" required/>
     <br>
     <label class="gothic" for="password">PW:</label>
-    <input class="nanum" type="text" id="password" name="password" required/>
+    <input class="nanum" type="password" id="password" name="password" required/>
     <br>
     <input class="nanum" type="submit" value="회원가입"/>
 </form>
