--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -6,7 +6,7 @@
     <title>MyBlog | 메인페이지</title>
 </head>
 <body>
-<a class="gothic", href="/joinForm">•메뉴</a>
-<a class="gothic", th:href="@{'/member'+${member.id}}">•마이페이지</a>
+<a class="gothic", href="/menu">•메뉴</a>
+<a class="gothic", href="#">•마이페이지</a>
 </body>
 </html>
