--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <a class="gothic", href="/menu">•메뉴</a>
-<a class="gothic", href="#">•마이페이지</a>
+<a class="gothic", href="/member">•마이페이지</a>
 </body>
 </html>
