--- a/src/main/resources/templates/main/mainMenu.html
+++ b/src/main/resources/templates/main/mainMenu.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <h3 class="gothic">메뉴</h3>
-<a class="gothic", href="/diaryList">•일기</a>
-<a class="gothic", href="#">•일정</a>
-<a class="gothic", href="/#">•취미</a>
+<a class="gothic" href="/diaryList">•일기</a>
+<a class="gothic" href="/scheduleList">•일정</a>
+<a class="gothic" href="/hobbyList">•취미</a>
 <br>
-<a class="gothic", href="/#">•공지</a>
-<a class="gothic", href="/#">•건의</a>
+<a class="gothic" href="/noticeList">•공지</a>
+<a class="gothic" href="/ideaList">•건의</a>
 <br>
-<a class="gothic", href="/home">◂뒤로가기</a>
+<a class="gothic" href="/home">◂뒤로가기</a>
 </body>
 </html>
